# finance-trading-screen

./: .gitignore  CMakeLists.txt  ChartWidget.cpp  ChartWidget.h  MainWindow.cpp  MainWindow.h  OrderEntryPanel.cpp  OrderEntryPanel.h  README.md  TickerPlaceholder.cpp  TickerPlaceholder.h  TradingBottomPanel.cpp  TradingViewWidget.cpp  TradingViewWidget.h  backtest.db  build.bat  build_app.bat  fetch_data.py  finance-trading-screen.pro  generate_dummy_data.py  inspect_db.py  main.cpp  orderbook.cpp  orderbook.h  orderbook_1.json  orderbook_2.json  orderbook_3.json  run.bat  run_app.bat  verify_all_dbs.py  verify_db_path.py
build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TradingLayoutSkeleton.sln  TradingLayoutSkeleton.vcxproj  TradingLayoutSkeleton.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_x64/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_x64/TradingLayoutSkeleton_autogen/: mocs_compilation_Debug.cpp
build_x64/TradingLayoutSkeleton_autogen/include_Debug/EWIEGA46WW/: moc_ChartWidget.cpp.d  moc_MainWindow.cpp.d  moc_OrderEntryPanel.cpp.d  moc_TickerPlaceholder.cpp.d  moc_TradingBottomPanel.cpp.d  moc_orderbook.cpp.d
build_x64/TradingLayoutSkeleton_autogen/include_Debug/PRMOGMWJPH/: moc_orderbook.cpp.d
build_x64/TradingLayoutSkeleton_autogen/include_Debug/YPKJ5OE7LN/: moc_ChartWidget.cpp.d  moc_MainWindow.cpp.d  moc_OrderEntryPanel.cpp.d  moc_TickerPlaceholder.cpp.d  moc_TradingBottomPanel.cpp.d
data/: backtest.db
scripts/: fetch_market_data.py  insert_btc_data.py
src/: main.cpp
src/core/: orderbook.cpp  orderbook.h
src/ui/: ChartWidget.cpp  ChartWidget.h  MainWindow.cpp  MainWindow.h  OrderEntryPanel.cpp  OrderEntryPanel.h  TickerPlaceholder.cpp  TickerPlaceholder.h  TradingBottomPanel.cpp  TradingBottomPanel.h
